# wega

./: Cargo.toml  LICENSE  README.md
app/wega/: Cargo.toml
app/wega/src/: main.rs
libs/stationary-wavelet/: Cargo.toml
libs/stationary-wavelet/src/: convolution.rs  kernel.rs  lib.rs  recompose.rs  wavelet_transform.rs
