[package]
name = "wega"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
imageproc = "0.24.0"
lib-stationary-wavelet = { path = "../../libs/stationary-wavelet/" }
